fixed invitation bar text overflow

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -224,7 +224,7 @@ header .flex-user {
 
 .invitation-bottom-bar {
   width: 70%;
-  height: 70px;
+  min-height: 70px;
   position: absolute;
   background: #eeeee7;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
